# My_FastAPI

./: .gitignore  cryptid.db  cryptid.db-journal  main.py  pyproject.toml  requirements.txt
examples/: README_examples.md  main_ex.py
examples/data/: creature.py  explorer.py
examples/db/: cryptid.db  cryptid.db-journal
examples/fake/: creature.py  explorer.py
examples/model/: creature.py  explorer.py
examples/service/: creature.py  explorer.py
examples/test/unit/service/: test_creature.py
examples/web/: creature.py  explorer.py
src/: README_examples.md  main.py  main_ex.py
src/data/: creature.py  explorer.py  init.py
src/db/: cryptid.db
src/fake/: creature.py  explorer.py
src/model/: creature.py
src/service/: creature.py  explorer.py
src/test/unit/data/: test_explorer.py
src/test/unit/service/: test_creature.py
src/web/: creature.py  explorer.py
