[tool.poetry]
name = "my-fastapi"
version = "0.1.0"
description = ""
authors = ["Serghei <siracencoserghei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "0.6.0"
anyio = "4.3.0"
build = "1.2.1"
cachecontrol = "0.14.0"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
crashtest = "0.4.1"
cryptography = "42.0.5"
defusedxml = "0.7.1"
distlib = "0.3.8"
dulwich = "0.21.7"
fastapi = "0.110.2"
fastjsonschema = "2.19.1"
filelock = "3.13.4"
h11 = "0.14.0"
httpie = "3.2.2"
idna = "3.7"
importlib-metadata = "<7.0"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jeepney = "0.8.0"
keyring = "24.3.1"
markdown-it-py = "3.0.0"
mdurl = "0.1.2"
more-itertools = "10.2.0"
msgpack = "1.0.8"
multidict = "6.0.5"
packaging = "24.0"
pexpect = "4.9.0"
pkginfo = "1.10.0"
platformdirs = "4.2.0"
poetry = "1.8.2"
poetry-core = "1.9.0"
poetry-plugin-export = "1.7.1"
ptyprocess = "0.7.0"
pycparser = "2.22"
pydantic = "2.7.0"
pydantic-core = "2.18.1"
pygments = "2.17.2"
pyproject-hooks = "1.0.0"
pysocks = "1.7.1"
rapidfuzz = "3.8.1"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
rich = "13.7.1"
secretstorage = "3.3.3"
shellingham = "1.5.4"
sniffio = "1.3.1"
starlette = "0.37.2"
tomlkit = "0.12.4"
trove-classifiers = "2024.4.10"
typing-extensions = "4.11.0"
urllib3 = "2.2.1"
uvicorn = "0.29.0"
virtualenv = "20.25.3"
zipp = "3.18.1"
opentelemetry-api = "^1.24.0"
opentelemetry-sdk = "^1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["."]